# emberlog

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: format.md
examples/: DECISIONS.md  README.md  session-start.sh
scripts/: smoke.sh
src/emberlog/: __init__.py  __main__.py  cli.py  clock.py  errors.py  ids.py  lint.py  model.py  parser.py  provenance.py  store.py  ttl.py  writer.py
tests/: conftest.py  test_cli.py  test_clock.py  test_ids.py  test_lint.py  test_parser.py  test_provenance.py  test_readme_example.py  test_store.py  test_ttl.py  test_writer.py
